--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -7,10 +7,14 @@
   <title>Calendar App</title>
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  {{!-- Default CSS --}}
-  {{!-- <link rel="stylesheet" href="/css/default.css"> --}}
+  {{!-- Reset --}}
+  <link rel="stylesheet" href="/css/reset.css">
+  {{!-- Tailwind --}}
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  {{!-- Google Fonts --}}
+  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
   {{!-- Dynamic CSS loader --}}
-  {{!-- <link rel="stylesheet" href="/css/{{cssAndJSfilename}}.css"> --}}
+  <link rel="stylesheet" href="/css/{{file}}.css">
 </head>
 
 <body>
@@ -18,6 +22,6 @@
 </body>
 
 {{!-- Dynamic JS loader --}}
-{{!-- <script src="/js/{{cssAndJSfilename}}.js"></script> --}}
+<script src="/js/{{file}}.js"></script>
 
 </html>
