--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,39 +1,31 @@
-<p>Google Calendar API Quickstart</p>
+<div id="main">
+  <p class="main_header">Google Calendar</p>
 
-<!--Add buttons to initiate auth sequence and sign out-->
-<button id="authorize_button" style="display: none;">Authorize</button>
-<button id="signout_button" style="display: none;">Sign Out</button>
+  <!--Add buttons to initiate auth sequence and sign out-->
+  <button
+    class="main_btn bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
+    id="authorize_button" style="display: none;">Log In</button>
+  <button
+    class="main_btn bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
+    id="signout_button" style="display: none;">Sign Out</button>
 
-<pre id="content" style="white-space: pre-wrap;"></pre>
+  <pre id="content" style="white-space: pre-wrap;"></pre>
+</div>
 
 <script type="text/javascript">
-  // Client ID and API key from the Developer Console
-  var CLIENT_ID = "{{clientID}}";
-  var API_KEY = "{{apiKey}}";
-
-  // Array of API discovery doc URLs for APIs used by the quickstart
-  var DISCOVERY_DOCS = [
+  const authorizeButton = document.getElementById("authorize_button");
+  const signoutButton = document.getElementById("signout_button");
+  const CLIENT_ID = "{{clientID}}";
+  const API_KEY = "{{apiKey}}";
+  const DISCOVERY_DOCS = [
     "https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"
   ];
+  const SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
 
-  // Authorization scopes required by the API; multiple scopes can be
-  // included, separated by spaces.
-  var SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
-
-  var authorizeButton = document.getElementById("authorize_button");
-  var signoutButton = document.getElementById("signout_button");
-
-  /**
-   *  On load, called to load the auth2 library and API client library.
-   */
   function handleClientLoad() {
     gapi.load("client:auth2", initClient);
   }
 
-  /**
-   *  Initializes the API client library and sets up sign-in state
-   *  listeners.
-   */
   function initClient() {
     gapi.client
       .init({
@@ -44,12 +36,9 @@
       })
       .then(
         function () {
-          // Listen for sign-in state changes.
           gapi.auth2
             .getAuthInstance()
             .isSignedIn.listen(updateSigninStatus);
-
-          // Handle the initial sign-in state.
           updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
           authorizeButton.onclick = handleAuthClick;
           signoutButton.onclick = handleSignoutClick;
@@ -60,10 +49,6 @@
       );
   }
 
-  /**
-   *  Called when the signed in status changes, to update the UI
-   *  appropriately. After a sign-in, the API is called.
-   */
   function updateSigninStatus(isSignedIn) {
     if (isSignedIn) {
       authorizeButton.style.display = "none";
@@ -75,37 +60,20 @@
     }
   }
 
-  /**
-   *  Sign in the user upon button click.
-   */
   function handleAuthClick(event) {
     gapi.auth2.getAuthInstance().signIn();
   }
 
-  /**
-   *  Sign out the user upon button click.
-   */
   function handleSignoutClick(event) {
     gapi.auth2.getAuthInstance().signOut();
   }
 
-  /**
-   * Append a pre element to the body containing the given message
-   * as its text node. Used to display the results of the API call.
-   *
-   * @param {string} message Text to be placed in pre element.
-   */
   function appendPre(message) {
-    var pre = document.getElementById("content");
-    var textContent = document.createTextNode(message + "\n");
+    const pre = document.getElementById("content");
+    const textContent = document.createTextNode(message + "\n");
     pre.appendChild(textContent);
   }
 
-  /**
-   * Print the summary and start datetime/date of the next ten events in
-   * the authorized user's calendar. If no events are found an
-   * appropriate message is printed.
-   */
   function listUpcomingEvents() {
     gapi.client.calendar.events
       .list({
@@ -117,13 +85,13 @@
         orderBy: "startTime"
       })
       .then(function (response) {
-        var events = response.result.items;
+        const events = response.result.items;
         appendPre("Upcoming events:");
 
         if (events.length > 0) {
           for (i = 0; i < events.length; i++) {
-            var event = events[i];
-            var when = event.start.dateTime;
+            const event = events[i];
+            const when = event.start.dateTime;
             if (!when) {
               when = event.start.date;
             }
