--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,14 +1,47 @@
 #main {
   position: absolute;
-  top: 30%;
-  left: 15%;
+  top: 7.5%;
+  left: 5%;
   .main_header {
     font-size: 48px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin: 0 0 20px 0;
   }
+
+  &,
+  #content {
+    position: absolute;
+  }
+
   .main_btn {
+    background-color: #fff;
+    color: black;
+    font-weight: bold;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    padding: 1em;
+  }
+
+  .main_btn,
+  .content_event {
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    border: 1px solid #cbd5e0;
+    border-radius: 0.25rem;
+  }
+  #content {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 15px;
+    .content_event {
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+        0 1px 2px 0 rgba(0, 0, 0, 0.06);
+      border: 1px solid #cbd5e0;
+      border-radius: 0.25rem;
+      width: 220px;
+      height: 400px;
+      &:last-child {
+        margin-bottom: 50px;
+      }
+    }
   }
 }
