--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -22,9 +22,6 @@
     width: 100%;
     margin-bottom: 20px;
     padding: 1em;
-    &:hover {
-      background-color: #eeeeee;
-    }
   }
 
   .main_btn,
@@ -33,17 +30,69 @@
     border: 1px solid #cbd5e0;
     border-radius: 0.25rem;
   }
+
+  .main_btn,
+  .content_event_link {
+    transition: all ease-in-out 0.2s;
+    &:hover {
+      background-color: whitesmoke !important;
+    }
+  }
+
   #content {
-    display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-gap: 15px;
     .content_event {
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
-        0 1px 2px 0 rgba(0, 0, 0, 0.06);
-      border: 1px solid #cbd5e0;
-      border-radius: 0.25rem;
+      position: relative;
+      border-radius: 10px;
       width: 220px;
       height: 400px;
+      &--empty {
+        width: 100%;
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(146, 19, 19);
+        font-size: 18px;
+        font-weight: bold;
+        padding: 0.5em;
+        color: white;
+      }
+      &_day,
+      &_date,
+      &_title,
+      &_desc {
+        margin: 20px 15px;
+      }
+      &_day {
+        font-weight: bold;
+        font-size: 32px;
+      }
+      &_date {
+        font-size: 22px;
+      }
+
+      &_title {
+        font-size: 18px;
+      }
+
+      &_desc {
+        font-size: 16px;
+      }
+      &_link {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        left: 10px;
+        padding: 0.5em;
+        border-radius: 3px;
+        background-color: #fff;
+        text-align: center;
+        text-decoration: none;
+        color: black;
+        font-weight: bold;
+      }
       &:last-child {
         margin-bottom: 50px;
       }
