--- a/public/scss/reset.scss
+++ b/public/scss/reset.scss
@@ -7,5 +7,5 @@ body {
   padding: 0;
   background-color: #fff;
   color: #000;
-  font-family: $fonts;
+  font-family: Arial, Helvetica, sans-serif;
 }
