--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -99,3 +99,62 @@
     }
   }
 }
+
+@media (max-width: 1820px) {
+  #content {
+    grid-template-columns: repeat(5, 1fr) !important;
+  }
+}
+
+@media (max-width: 1280px) {
+  #content {
+    grid-template-columns: repeat(3, 1fr) !important;
+  }
+}
+
+@media (max-width: 780px) {
+  #main {
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    width: 100%;
+    .main_header {
+      text-align: center;
+    }
+    .main_btn {
+      width: calc(100% - 5%);
+    }
+  }
+}
+
+@media (max-width: 730px) {
+  #main {
+    top: 10px;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    #content {
+      position: relative;
+      grid-template-columns: 1fr 1fr !important;
+    }
+  }
+}
+
+@media (max-width: 490px) {
+  .content_event {
+    width: 180px !important;
+    height: 350px !important;
+  }
+}
+
+@media (max-width: 430px) {
+  #content {
+    grid-gap: 5px !important;
+    .content_event:last-child {
+      margin-bottom: 10px !important;
+    }
+  }
+}
