Changed up the colors

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -43,6 +43,7 @@
     grid-template-columns: repeat(7, 1fr);
     grid-gap: 15px;
     .content_event {
+      color: #fff;
       position: relative;
       border-radius: 10px;
       width: 220px;
