--- a/views/main.hbs
+++ b/views/main.hbs
@@ -120,7 +120,7 @@
         pre.innerHTML = ""
         for (i = 0; i < events.length; i++) {
           const event = events[i];
-          const when = event.start.dateTime;
+          let when = event.start.dateTime;
           if (!when) {
             when = event.start.date;
           }
